# dg-research-backend

./: .gitignore  ARCHITECTURE.md  MAC_LOGIN_PROFILE_DEBUG.md  PIPELINE_SPEC.md  PublishRecipe.md  README.md  gemini_narrate.py  models.py  narrate.py  prompts.py  pyproject.toml  requirements.txt  research.py  selfheal.py  selfheal_intents.json  vision.py  vision_narrate.py  vision_test.py
.github/workflows/: be-tests.yml
agent/: .gitattributes  .gitignore  README.md  TESTMATRIX.md  pyproject.toml  requirements-dev.txt  requirements.txt
agent/facade/: __init__.py  autostart.py  branding.py  bridge.py  cli.py  config.py  connect.py  devicelogin.py  firestore_rest.py  logsetup.py  prefs.py  runview.py  selfupdate.py  session.py  store.py
agent/facade/skill/: SKILL.md
agent/facade/skill/scripts/: sr.py  sr_attention_poll.py  sr_update_notice.py
agent/facade/web/: login.html
agent/tests/: _helpers.py  conftest.py  test_agent_session.py  test_app_plane_unchanged.py  test_autostart.py  test_branding.py  test_bridge.py  test_bridge_csrf.py  test_bridge_device.py  test_bridge_remote_login.py  test_bridge_routes.py  test_bridge_shutdown.py  test_cli_commands.py  test_cli_parser.py  test_config.py  test_connect.py  test_devicelogin.py  test_e2e_lifecycle.py  test_firestore_rest.py  test_logsetup.py  test_prefs.py  test_remote_autopoll.py  test_runview.py  test_selfupdate.py  test_session.py  test_session_custom_token.py  test_skill_commands_resolve.py  test_sr_client.py  test_sr_do.py  test_sr_skip_agents.py  test_sr_stream.py  test_sr_update_notice.py  test_store.py
auth/: __init__.py  credentials.py  keystore.py  pairing.py  v2_flow.py
queues/: README.md
release/: ERENS_REVIEW_RESPONSE.md  MAC_WHEEL_BUILD.md
scripts/: __init__.py  admin_cleanup_stale_ongoing.py  dg-supervisor.env.example  dump_push_audit.py  model_refresh_report.py  regenerate_oauth_refresh_token.py  run_supervisor.cmd  selfheal_report.py  vision_shadow_report.py
tests/: conftest.py  released_deps.json  test_913_chatgpt_panel_shapes.py  test_914_claude_artifact_keepopen.py  test_advisory_thinking.py  test_agent_loop_429.py  test_alert_ai_copy_955.py  test_alert_consistency_921.py  test_alert_copy_hygiene_63.py  test_alert_id_collisions_62.py  test_alert_intents.py  test_alert_unification.py  test_anthropic_err_kind.py  test_attach_verify_949.py  test_audio_terminal_generate_757.py  test_browser_crash_recovery.py  test_browser_profile_match.py  test_bug_batch_929.py  test_bugs_951.py  test_bugs_953.py  test_bump_agent_version.py  test_bump_version.py  test_cancel_deferred.py  test_chat_mode_gate.py  test_chatgpt_dr_menu.py  test_claude_clarification.py  test_claude_mode_detect.py  test_claude_model_pick.py  test_claude_p2_scroll_detect.py  test_claude_tools_menu.py  test_cli_dispatcher.py  test_cloud_tasks.py  test_command_ack_955.py  test_command_stale_gate.py  test_completion_determination_948.py  test_cua_availability_probe.py  test_cua_download_idempotency.py  test_dead_worker_backstop_64.py  test_deadline_lifecycle_955.py  test_deferred_recompute.py  (+99 more)
tests/fixtures/selfheal_golden/: README.md  chatgpt_seed-2026-06_enable_deep_research.json  claude_seed-2026-06_select_model.json  gemini_seed-2026-06_enable_deep_research.json
tests/fixtures/vision/: README.md
tools/: build_compiled.py  bump_agent_version.py  bump_version.py
tracks/: README.md
