[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superresearch-agent"
version = "0.1.7"
description = "Install Super Research into a chat runtime (Hermes / OpenClaw) with `pipx run superresearch-agent connect` — an account-authed loopback bridge that drives the user's own Super Research from chat."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "keyring>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
# Canonical name resolved by `pipx run superresearch-agent connect`. `agent` is kept
# as a short alias (back-compat with the `python research.py agent` front door
# and existing docs/recipes); both run the same CLI.
superresearch-agent = "facade.cli:main"
agent = "facade.cli:main"

[tool.setuptools]
packages = ["facade"]

[tool.setuptools.package-data]
facade = ["web/*.html", "web/icons/*.png", "skill/SKILL.md", "skill/scripts/*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
